MAPREDUCE-2455. Remove deprecated JobTracker.State in favour of JobTrackerStatus.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1129771 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/webapps/job/jobtracker.jspx
+++ b/src/webapps/job/jobtracker.jspx
@@ -49,7 +49,7 @@
     <tracker_name><jsp:expression>trackerName</jsp:expression></tracker_name>
 
     <tracker>
-      <state><jsp:expression>tracker.getClusterStatus().getJobTrackerState()</jsp:expression></state>
+      <state><jsp:expression>tracker.getClusterStatus().getJobTrackerStatus()</jsp:expression></state>
       <started><jsp:expression>new Date(tracker.getStartTime())</jsp:expression></started>
       <version><jsp:expression>VersionInfo.getVersion()</jsp:expression></version>
       <revision><jsp:expression>VersionInfo.getRevision()</jsp:expression></revision>
