--- a/hadoop-mapreduce-project/hadoop-yarn/hadoop-yarn-site/src/site/apt/ClusterSetup.apt.vm
+++ b/hadoop-mapreduce-project/hadoop-yarn/hadoop-yarn-site/src/site/apt/ClusterSetup.apt.vm
@@ -403,9 +403,10 @@ Hadoop MapReduce Next Generation - Cluster Setup
     the health of the local disks (specifically checks nodemanager-local-dirs
     and nodemanager-log-dirs) and after reaching the threshold of number of
     bad directories based on the value set for the config property
-    yarn.nodemanager.disk-health-checker.min-healthy-disks. The boot disk is
-    either raided or a failure in the boot disk is identified by the health
-    checker script.
+    yarn.nodemanager.disk-health-checker.min-healthy-disks, the whole node is
+    marked unhealthy and this info is sent to resource manager also. The boot
+    disk is either raided or a failure in the boot disk is identified by the
+    health checker script.
 
     * {Slaves file}
       
