Backport MAPREDUCE-3906 from trunk. svn merge -c 1358896 ../../trunk (harsh)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1358897 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/hadoop-yarn/hadoop-yarn-site/src/site/apt/ClusterSetup.apt.vm
+++ b/hadoop-mapreduce-project/hadoop-yarn/hadoop-yarn-site/src/site/apt/ClusterSetup.apt.vm
@@ -985,7 +985,7 @@ KVNO Timestamp         Principal
 | | </etc/security/keytab/jhs.service.keytab> | |
 | | | Kerberos keytab file for the MapReduce JobHistory Server. |
 *-------------------------+-------------------------+------------------------+
-| <<<mapreduce.jobhistory.principal>>> | mapred/_HOST@REALM.TLD | |
+| <<<mapreduce.jobhistory.principal>>> | jhs/_HOST@REALM.TLD | |
 | | | Kerberos principal name for the MapReduce JobHistory Server. |
 *-------------------------+-------------------------+------------------------+
 
